--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -35,6 +35,12 @@ html, body {
     width: 30px;
 }
 
+/* z-index */
+.z_index{
+    z-index: 10;
+}
+
+
 /* Colors */
 .color_n{
     color: var(--color-black);
@@ -108,6 +114,9 @@ html, body {
 }
 .font_size_15{
     font-size: 15px;
+}
+.font_size_14{
+    font-size: 14px;
 }
 .font_w_n{
     font-weight: normal;
@@ -217,6 +226,9 @@ html, body {
 }
 .p_t_1{
     padding-top: 1rem;
+}
+.p_8_16{
+    padding: 8px 16px;
 }
 
 /* uls */
@@ -393,12 +405,40 @@ html, body {
     text-align: center;
 }
 
-
+.message_error{
+    background-color: #f8d7da;
+    color: #9d1c24;
+    padding: 0.7rem 1.2rem;
+    max-width: 300px;
+}
+.message_success{
+    background-color: #d4edda;
+    color: #628b67;
+    padding: 0.7rem 1.2rem;
+    max-width: 300px;
+}
+.userLogo{
+    background-color: var(--color-green);
+    padding: 0.5rem 1rem;
+    border-radius: 50%;
+    color: var(--color-white);
+    cursor: pointer;
+}
+.userSettings{
+    top: 35px;
+    right: 0;
+    width: 170px;
+    background-color: #343434;
+    color: var(--color-white);
+    border-radius: 5px;
+}
 
 /* border */
 .border_none{
     border: none;
-
+}
+.border_top{
+    border-top: 1px solid var(--color-white);
 }
 
 /* overflow */
@@ -419,7 +459,10 @@ html, body {
 .bttn:hover{
     background-color: var(--color-default-hover);
 }
-
+.hoverbtn:hover{
+    background-color: var(--color-green);
+    color: var(--color-black);
+}
 /* Labels */
 
 /* Positions */
