--- a/src/views/partials/login.ejs
+++ b/src/views/partials/login.ejs
@@ -1,10 +1,11 @@
+<%- include('../layouts/messages.ejs') -%>
 <div class="container">
     <div class="d_flex j_c_c flex_d_c a_items_c">
-        <form action="" method="post" class="">
+        <form action="/register/login" method="post" class="">
             <div class="d_flex flex_d_c">
                 <h1 class="font_w_n">Login</h1>
-                <input type="text" class="searcher" name="" id="" placeholder="Telefono">
-                <input type="text" class="searcher" name="" id="" placeholder="Contraseña">
+                <input type="email" class="searcher" name="Email" id="" placeholder="Telefono">
+                <input type="password" class="searcher" name="Password" id="" placeholder="Contraseña">
                 <a href="" class="m_t_b_05 font_size_15">Olvide la contraseña</a>
             </div>
                 <button type="submit" class="input_text m_t_1 bg_color_g color_w font_w_bold font_size_25 border_none cursor">Entrar</button>
