--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg_3">
+<footer class="bg_3 m_b_60">
     <div class="container">
         <div class="d_grid grid_t_c_2 j_c_c text_a_c">
             <a href="" class="d_flex a_items_c text_d_n color_n j_c_c">
@@ -34,8 +34,8 @@
         </div>
     </div>
 </footer>
-    <div class="d_flex j_c_c a_items_c bg_color_g height_50">
+    <!-- <div class="d_flex j_c_c a_items_c bg_color_g height_50 m_b_60">
         <span class="">© 2022 Mercar-Do</span>
-    </div>
+    </div> -->
 </body>
 </html>
