--- a/src/views/partials/newacount.ejs
+++ b/src/views/partials/newacount.ejs
@@ -1,13 +1,15 @@
+<%- include('../layouts/messages.ejs') -%>
 <div class="container">
     <div class="d_flex j_c_c flex_d_c a_items_c">
         <form action="" method="post" class="">
             <div class="d_flex flex_d_c">
                 <h1 class="font_w_n">Nueva Cuenta</h1>
-                <input type="text" class="searcher" name="Username" id="" placeholder="Username" >
-                <input type="text" class="searcher" name="Name" id="" placeholder="Nombre" >
-                <input type="text" class="searcher" name="LastName" id="" placeholder="Apellido opcional">
+                <input type="text" class="searcher" name="Username" placeholder="Username" >
+                <input type="text" class="searcher" name="Name" placeholder="Nombre" >
+                <input type="text" class="searcher" name="LastName" placeholder="Apellido">
                 <input type="email" class="searcher" name="Email" id="" placeholder="Email o Teléfono" >
-                <input type="password" class="searcher" name="Password" id="" placeholder="Contraseña" >
+                <input type="password" class="searcher" name="Password" placeholder="Contraseña" >
+                <input type="password" class="searcher" name="Confirm" placeholder="Confirmar contraseña">
                 <!-- <input type="password" class="searcher" name="" id="" placeholder="Confirmar contraseña"> -->
             </div>
                 <button type="submit" class="input_text m_t_1 bg_color_g color_w font_w_bold font_size_25 border_none cursor">Crear</button>
