--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -7,5 +7,6 @@
     <title></title>
     <!-- Inport cssStyles -->
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
 </head>
 <body id="body">
