--- a/src/views/partials/article.ejs
+++ b/src/views/partials/article.ejs
@@ -2,19 +2,21 @@
 <%- include('./navigation.ejs') -%>
 
 <div class="container">
-    <div class="d_grid grid_t_c_4 max_w_800 m_auto">
-        <img src="/uploads/<%=art.Img%>" alt="..." class="img_Cat m_auto pos_stcky">
-        <div class="">
-            <h1 class="font_w_n"> <%= art.Name %> </h1>
-            <p class="color_g font_size_25 font_w_bold"> $ <%= art.Price %> </p>
-
+    <div class="d_grid grid_t_c_3 max_w_800 m_auto getThis">
+        <div class="m_auto">
+            <img src="/uploads/<%=art.Img%>" alt="..." class="img_Cat pos_stcky zoom transition">
+        </div>
+        <div>
+            <span class="inactive" id="artID"><%= art.ID_article %></span>
+            <h1 class="font_w_n" id="artName"> <%= art.Name %> </h1>
+            <p class="color_g font_size_25 font_w_bold" id="artPrice"> $ <%= art.Price %> </p>
             <div class="d_flex flex_d_c">
+                <span>Vendedor: <a href="#"> <%= all_data.NameUser %> </a></span>
                 <label for=""> Cantidad </label>
                 <input type="number" value="1" min="1" max="9" class="input_number">
-                <button class="m_t_1 bg_color_g bttn"> Añadir al carrito </button>
-                <p> <%= art.Description %> </p>
+                <button id="add-to-car" class="m_t_1 bg_color_g bttn"> Añadir al carrito </button>
+                <p > <%= art.Description %> </p>
             </div>
-
         </div>
     </div>
 </div>
