--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -44,7 +44,7 @@
                 </div>
                 <div class="d_flex flex_d_c">
                     <button type="submit" class="input_text m_t_1 bg_color_g color_w font_w_bold font_size_25 border_none cursor">Guardar cambios</button>
-                    <a href="/sales" class="input_text m_t_1 bg_color_r color_w font_w_bold font_size_25 border_none cursor text_d_n text_a_c_1">Cancelar</a>
+                    <a href="/profile" class="input_text m_t_1 bg_color_r color_w font_w_bold font_size_25 border_none cursor text_d_n text_a_c_1">Cancelar</a>
                 </div>    
             </div>    
         </form>
