--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -9,8 +9,8 @@
         <div class="d_flex gap_1 j_c_c a_items_c">
             <!-- NavBar desktop -->
             <div class="d_flex gap_1 d_none_desk">
-                <a href="/sell" class="text_d_n color_n">Vender</a>
-                <a href="/store" class="text_d_n color_n">Tienda</a>
+                <a href="/sell" class="text_d_n color_n underline">Vender</a>
+                <a href="/store" class="text_d_n color_n underline">Tienda</a>
             </div>
             <!-- Shopping bag -->
             <span class="pos_rel cursor" id="shopping-car">
@@ -31,7 +31,7 @@
                     <div class="z_index inactive pos_abs userSettings d_flex j_c_c flex_d_c" id="Box_User_Settings">
                         <span class="p_8_16 font_size_14">Registrado como <%= user.Name %> </span>
                         <div class="border_top p_8_16"></div>
-                        <a href="/sales" class="hoverbtn text_d_n color_w p_8_16 font_size_14">Mis ventas</a>
+                        <a href="/profile" class="hoverbtn text_d_n color_w p_8_16 font_size_14">Perfil</a>
                         <a href="/logout" class="hoverbtn text_d_n color_w p_8_16 font_size_14">Desconectar</a>
                         <div class="border_top p_8_16"></div>
                     </div>
